Sun Jul  6 23:16:30 2014  Masaya Tarui  <tarui@ruby-lang.org>

	* st.c (st_foreach_check): change start point of search at check
	  from top to current. [ruby-dev:48047] [Bug #9646]

Sun Jul  6 22:56:03 2014  Zachary Scott  <e@zzak.io>

	* lib/gserver.rb: [DOC] Fixed typo in example by @stomar [Bug #9543]

Fri Jul  4 00:46:03 2014  Zachary Scott  <e@zzak.io>

	* enumerator.c: [DOC] Fix example to show Enumerator#peek behavior
	  Patch by Erik Hollembeak [Bug #9814]

Fri Jul  4 00:44:43 2014  Zachary Scott  <e@zzak.io>

	* enum.c: [DOC] Use #find in example to clarify alias by @rachellogie
	  Patch submitted via documenting-ruby/ruby#34

Fri Jul  4 00:42:57 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* man/ruby.1: remove deadlink. [ruby-core:62145][Bug #9773]

Fri Jul  4 00:25:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (not_a_member): extract name error and use same error
	  messages.  based on the patch by Marcus Stollsteimer <sto.mar AT
	  web.de> at [ruby-core:61721].  [Bug #9684]

Thu Jul  3 01:19:50 2014  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* numeric.c (num_step_scan_args): table argument of rb_get_kwargs() is
	  array of IDs, not Symbols. [ruby-dev:48353] [Bug #9811]

Thu Jul  3 01:19:50 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (num_step_scan_args): check keyword arguments and fail
	  if they conflict with positional arguments.
	  [ruby-dev:48177] [Bug #9811]

Tue Jul  1 03:05:22 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (read_all): truncate the buffer before appending read data,
	  instead of truncating before reading.
	  [ruby-core:55951] [Bug #8625]

Tue Jul  1 03:05:22 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_setstrbuf, io_read): should not shorten the given buffer until
	  read succeeds.  [ruby-core:55951] [Bug #8625]

Mon Jun 30 03:15:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (core_hash_merge_kwd): should return the result hash, which