@@ -1,3 +1,7 @@
+Fri Jul 11 23:07:09 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* lib/matrix.rb: Fix sign for cross_product [#9499]
+
 Sun Jul  6 23:16:30 2014  Masaya Tarui  <tarui@ruby-lang.org>
 
 	* st.c (st_foreach_check): change start point of search at check
